--- a/modules/t1/Makefile
+++ b/modules/t1/Makefile
@@ -5,14 +5,14 @@
 ## Login   <soules_k@epitech.net>
 ## 
 ## Started on  Mon Feb 23 06:09:39 2015 eax
-## Last update Mon Feb 23 06:37:10 2015 eax
+## Last update Mon Feb 23 07:22:31 2015 eax
 ##
 
 CC	=	gcc
 LD	=	ld
 
 CFLAGS	=	-g -m32 -nostdlib -fPIC -shared -W -Wall -Wextra
-LDFLAGS	=	-melf_i386 -fPIC -shared
+LDFLAGS	=	-melf_i386 -fPIC -shared -einit_module
 
 SRC	=	t1.c
 OBJ	=	$(SRC:.c=.o)
