--- a/modules/t2/Makefile
+++ b/modules/t2/Makefile
@@ -5,13 +5,13 @@
 ## Login   <soules_k@epitech.net>
 ## 
 ## Started on  Mon Feb 23 06:11:00 2015 eax
-## Last update Mon Feb 23 07:23:24 2015 eax
+## Last update Mon Feb 23 19:17:26 2015 eax
 ##
 
 CC	=	gcc
 LD	=	ld
 
-CFLAGS	=	-g -m32 -nostdlib -fPIC -shared -W -Wall -Wextra
+CFLAGS	=	-g -m32 -nostdlib -fPIC -shared -W -Wall -Wextra -fno-builtin
 LDFLAGS	=	-melf_i386 -fPIC -shared -einit_module
 
 SRC	=	t2.c
